<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Win at Waiting</string>
    
    <!-- Settings Strings -->
    <string name="action_settings">Settings</string>
    <string name="create_task_action_item">Create Task</string>
    
    <!-- Main Screen Strings -->
    <string name="main_activity_title">Win at Waiting</string> <!-- temporary title until branding is done -->
    <string name="main_activity_button_view_tasks">Tasks</string>
    <string name="main_activity_button_create_tasks">+</string>
    <string name="main_activity_button_todo">To-Do List</string>
    <string name="main_activity_button_social">Social</string>
    <string name="main_activity_button_book">Book</string>
    
    <!-- Book Activity Strings -->
    <string name="book_activity_title">Win at Waiting</string>
    
    <!-- Create Tasks Activity Strings -->
    <string name="create_tasks_activity_title">Create Task</string>
    <string name="create_tasks_activity_name_hint">Name</string>
    <string name="create_tasks_activity_priority_label">Priority</string>
    <string name="create_tasks_activity_duration_label">Duration</string>
    <string name="create_tasks_activity_privacy_label">Private</string>
    <string name="create_tasks_activity_additional_information_hint">Additional Information</string>
    <string name="create_tasls_activity_submit_button">Submit</string>
    
    <!-- ToDo Activity Strings -->
    <string name="todo_activity_title">To-Do List</string>
    <string name="todo_activity_save_button">Save</string>
    <string name="todo_activity_edittext_item_1">Item 1</string>
    <string name="todo_activity_edittext_item_2">Item 2</string>
    <string name="todo_activity_edittext_item_3">Item 3</string>
    <string name="todo_activity_edittext_item_4">Item 4</string>
    <string name="todo_activity_edittext_item_5">Item 5</string>
    
    <!-- View Tasks Activity Strings -->
    <string name="view_tasks_activity_title">View Tasks</string>
    
    <!-- View Tasks Activity Filter Fragment Strings -->
    
    <!-- View Tasks Activity View Fragment Strings -->
    

</resources>
