<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs495.winatwaiting.activities.ToDoActivity" >

    <include layout="@layout/toolbar" />

    <!-- Dummy item to prevent TextViews from receiving focus -->

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_toolbar_offset" >

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_padding"
            android:paddingRight="@dimen/activity_horizontal_padding"
            android:columnCount="1"
            android:rowCount="6" >

            <EditText
                android:id="@+id/todo_edittext1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="@dimen/activity_vertical_padding"
                android:layout_row="0"
                android:background="@drawable/edittext_design"
                android:inputType="textMultiLine"
                android:minLines="1"
                android:hint="@string/todo_activity_edittext_item_1" >
            </EditText>

            <EditText
                android:id="@+id/todo_edittext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="@dimen/activity_vertical_padding"
                android:layout_row="1"
                android:background="@drawable/edittext_design"
                android:inputType="textMultiLine"
                android:minLines="1"
                android:hint="@string/todo_activity_edittext_item_2" >
            </EditText>

            <EditText
                android:id="@+id/todo_edittext3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="@dimen/activity_vertical_padding"
                android:layout_row="2"
                android:background="@drawable/edittext_design"
                android:inputType="textMultiLine"
                android:minLines="1"
                android:hint="@string/todo_activity_edittext_item_3" >
            </EditText>

            <EditText
                android:id="@+id/todo_edittext4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="@dimen/activity_vertical_padding"
                android:layout_row="3"
                android:background="@drawable/edittext_design"
                android:inputType="textMultiLine"
                android:minLines="1"
                android:hint="@string/todo_activity_edittext_item_4" >
            </EditText>

            <EditText
                android:id="@+id/todo_edittext5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="@dimen/activity_vertical_padding"
                android:layout_row="4"
                android:background="@drawable/edittext_design"
                android:inputType="textMultiLine"
                android:minLines="1"
                android:hint="@string/todo_activity_edittext_item_5" >
            </EditText>

            <Button
                android:id="@+id/todo_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginTop="@dimen/activity_vertical_padding"
                android:layout_row="5"
                android:text="@string/todo_activity_save_button"
                android:onClick="onSaveButtonClick" >
            </Button>
        </GridLayout>
    </ScrollView>

</RelativeLayout>