<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs495.winatwaiting.activities.CreateTaskActivity" >

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_toolbar_offset" >

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_padding"
            android:rowCount="5" >

            <EditText
                android:id="@+id/create_tasks_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="start"
                android:layout_row="0"
                android:background="@drawable/edittext_design"
                android:gravity="center_vertical"
                android:hint="@string/create_tasks_activity_name_hint"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/list_view_item_min_height"
                android:minLines="2" />

            <TextView
                android:id="@+id/create_tasks_item_priority_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="start"
                android:layout_row="1"
                android:background="?android:attr/listChoiceBackgroundIndicator"
                android:clickable="true"
                android:gravity="center_vertical"
                android:minHeight="@dimen/list_view_item_min_height"
                android:onClick="onPriorityClicked"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/create_tasks_activity_priority_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/create_tasks_item_priority_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_gravity="end"
                android:layout_row="1"
                android:gravity="center"
                android:minHeight="@dimen/list_view_item_min_height"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/create_tasks_item_duration_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="start"
                android:layout_row="2"
                android:background="?android:attr/listChoiceBackgroundIndicator"
                android:clickable="true"
                android:gravity="center_vertical"
                android:minHeight="@dimen/list_view_item_min_height"
                android:onClick="onDurationClicked"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/create_tasks_activity_duration_label"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/create_tasks_item_duration_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_gravity="end"
                android:layout_row="2"
                android:gravity="center"
                android:minHeight="@dimen/list_view_item_min_height"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/create_tasks_item_privacy_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="start"
                android:layout_row="3"
                android:background="?android:attr/listChoiceBackgroundIndicator"
                android:clickable="true"
                android:gravity="center_vertical"
                android:minHeight="@dimen/list_view_item_min_height"
                android:onClick="onPrivacyClicked"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/create_tasks_activity_privacy_label"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/create_tasks_item_privacy_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_gravity="end"
                android:layout_row="3"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:minHeight="@dimen/list_view_item_min_height" />

            <EditText
                android:id="@+id/create_tasks_item_additional_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="start"
                android:layout_row="4"
                android:background="@drawable/edittext_design"
                android:gravity="center_vertical"
                android:hint="@string/create_tasks_activity_additional_information_hint"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/list_view_item_min_height"
                android:minLines="2" />
        </GridLayout>
    </ScrollView>

</RelativeLayout>